# restbucks-python

./: .gitignore  Makefile  README.md  pyproject.toml
app/: crud.py  database.py  deps.py  main.py  models.py  schemas.py
app/routers/: orders.py
