[tool.poetry]
name = "restbucks"
version = "0.1.0"
description = ""
authors = ["Bennie Robinson <bennrobi@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.66.0"}
SQLAlchemy = "^1.4.20"
fastapi-etag = "^0.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
